# lib_base

./: .clang-format  CMakeLists.txt  README.md
src/: lib_base.c  lib_base.h
tests/: CMakeLists.txt  copy.c  result.c  string.c  vec.c
